@@ -1,6 +1,6 @@
 Package: lme4a
 Version: 0.999375-48
-Date: 2010-04-03
+Date: 2010-05-18
 Title: Linear mixed-effects models using S4 classes
 Author: Douglas Bates <bates@stat.wisc.edu> and
         Martin Maechler <maechler@R-project.org>
